# wallet_test

./: .env.example  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
apps/api/: urls.py
apps/api/v1/: urls.py
apps/api/v1/schema/: urls.py
apps/api/v1/serializers/: __init__.py  transaction.py  wallet.py
apps/api/v1/tests/: test_serializers.py  test_views.py  test_views_concurrently.py  utils.py
apps/api/v1/views/: __init__.py  transaction.py  wallet.py
apps/wallet/: admin.py  factories.py
apps/wallet/migrations/: 0001_initial.py
apps/wallet/models/: __init__.py  transaction.py  wallet.py
apps/wallet/tests/: test_models.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  testing.py
